--- a/question.html
+++ b/question.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>stack-lite</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -23,11 +23,13 @@
                     <div id="home-u-name">
                             <a href="./profile.html">Tholle-mayer</a>
                     </div>
+                    <div id="home-u-name" class="sign-out">
+                        <a href="./index.html">Sign out</a>
+                    </div>
                 </div>    
         </div>
     </div>
-    <div class="mini-top-bar">
-    </div>
+    <div class="hero-banner"></div>
     <div class="main-content">
             <div class="main-content-left">
                     <div class= "left-mini">
@@ -38,7 +40,7 @@
                     <div class="public">
                         <i class="material-icons">public</i>
                     </div>
-                    <a href="./questions.html">StackOverflow</a>
+                    <a href="./questions.html">All Questions</a>
                 </div>
                 
             </div>
@@ -76,6 +78,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        footer goes here
+    </footer>
 
 </body>
 
