--- a/questions.html
+++ b/questions.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>stack-lite</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -23,13 +23,13 @@
                 <div id="home-u-name">
                     <a href="./profile.html">Tholle-mayer</a>
                 </div>
+                <div id="home-u-name" class="sign-out">
+                    <a href="./index.html">Sign out</a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="mini-top-bar">
-        <div class="home ">
-        </div>
-    </div>
+    <div class="hero-banner"></div>
     <div class="main-content">
         <div class="main-content-left">
             <div class="left-mini">
@@ -58,13 +58,26 @@
                 </div>
             </div>
             <div class="right-content">
-                <div class="quest-header">Top Questions</div>
+                <div class="quest-header">All Questions</div>
+                <div id="all-quest-num">4 Questions</div>
                 <div class="quest-container">
                     <h2>
                         <a href="./question.html">Delete and EDIT API's using expressJS</a>
                     </h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product
                         if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
+                    <div class="activity-flex">
+                        <div class="activity">
+                            <div class="pic-home"></div>
+                            <div class="quest-time">30 mins ago</div>
+                        </div>
+                        <div class="activity act-log">
+                            <div class="activity-num">2</div>
+                            <div class="activity-ans">Answers</div>
+                            <div class="activity-num activity-vote">2</div>
+                            <div class="activity-ans">Vote</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="quest-container">
                     <h2>
@@ -72,6 +85,18 @@
                     </h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product
                         if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
+                        <div class="activity-flex">
+                            <div class="activity">
+                                <div class="pic-home"></div>
+                                <div class="quest-time">30 mins ago</div>
+                            </div>
+                            <div class="activity act-log">
+                                <div class="activity-num">2</div>
+                                <div class="activity-ans">Answers</div>
+                                <div class="activity-num activity-vote">2</div>
+                                <div class="activity-ans">Vote</div>
+                            </div>
+                        </div>    
                 </div>
                 <div class="quest-container">
                     <h2>
@@ -79,6 +104,18 @@
                     </h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product
                         if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
+                        <div class="activity-flex">
+                            <div class="activity">
+                                <div class="pic-home"></div>
+                                <div class="quest-time">30 mins ago</div>
+                            </div>
+                            <div class="activity act-log">
+                                <div class="activity-num">2</div>
+                                <div class="activity-ans">Answers</div>
+                                <div class="activity-num activity-vote">2</div>
+                                <div class="activity-ans">Vote</div>
+                            </div>
+                        </div>    
                 </div>
                 <div class="quest-container">
                     <h2>
@@ -86,11 +123,26 @@
                     </h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product
                         if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
+                        <div class="activity-flex">
+                            <div class="activity">
+                                <div class="pic-home"></div>
+                                <div class="quest-time">30 mins ago</div>
+                            </div>
+                            <div class="activity act-log">
+                                <div class="activity-num">2</div>
+                                <div class="activity-ans">Answers</div>
+                                <div class="activity-num activity-vote">2</div>
+                                <div class="activity-ans">Vote</div>
+                            </div>
+                        </div>    
                 </div>
 
             </div>
         </div>
     </div>
+    <footer>
+        footer goes here
+    </footer>
 
 </body>
 
